# flake8-import-restrictions

./: LICENSE  README.md  aaa.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: python-black.yml  python-coverage.yml  python-flake8.yml  python-lints.yml  python-publish.yml  python-pylint.yml  python-tox.yml  setup-python.yml
flake8_import_restrictions/: checker.py  imports_submodule.py
requirements/: py311.txt  py312.txt  py37.txt  py39.txt
tests/: test_i2000.py  test_i2001.py  test_i2002.py  test_i2020.py  test_i2021.py  test_i2022.py  test_i2023.py  test_i2040.py  test_i2041.py  test_i2042.py  test_i2043.py  test_i2044.py  test_i2045.py  test_imports_submodule.py  test_imr202.py  test_imr223.py  test_imr241.py  test_include_exclude.py  util.py
tests/resources/: b.py  d.py
tests/resources/a/: c.py
