[tool.poetry]
name = "flake8-import-restrictions"
version = "2.1"
description = "A flake8 plugin used to disallow certain forms of imports."
authors = ["Andreas Tollkötter"]
homepage = "https://github.com/atollk/flake8-import-restrictions"
readme = "README.md"
packages = [{ include = "flake8_import_restrictions" }]
keywords = ["flake8", "import"]
license = "MIT"
classifiers = ["Framework :: Flake8", "Intended Audience :: Developers"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
flake8 = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest-flake8-path = "^1.5.0"
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
pylint = "^3.0.0"
tox = "^4.0.0"
tox-gh-actions = "^3.0.0"

[tool.poetry.plugins]
[tool.poetry.plugins."flake8.extension"]
IMR2 = "flake8_import_restrictions.checker:ImportChecker"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"