[metadata]
name = flake8-import-restrictions
version = 1.1.1
description = A flake8 plugin used to disallow certain forms of imports.
long_description = file: README.md
long_description_content_type = text/markdown
author = Andreas Tollkötter
url = https://github.com/atollk/flake8-import-restrictions
license = MIT
license_file = LICENSE
keywords = flake8, import
classifiers =
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    flake8_import_restrictions
include_package_data = True
python_requires = >=3.7
zip_safe = False

[options.entry_points]
flake8.extension =
    IMR2 = flake8_import_restrictions.checker:ImportChecker

